issues with content overlapping footer

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  height: 95%;
   background-color: #F0F0D8;
 }
 
@@ -7,8 +7,8 @@ html, body {
   background-color: #DDDDBA;
   font-family: courier;
   margin: 0 auto;
-  height: 100%;
-  
+  position: relative;
+  height: 100%; 
   max-width: 800px;
   text-align: left;
 }
@@ -26,16 +26,14 @@ html, body {
   clear: both;
 }
 
-.page-content {
-  height: 100%;  
+.page-content {  
   float: left;
+  max-height: 100%;
 }
 
-.page-footer { 
-  
-  min-height: 100%;
-  max-width: 100%;
-  background-color: #F0C030;
-  clear: both;
+.page-footer {
+  background: #F0C030;
+  max-width: 800px;
   text-align: center;
+  margin: 0 auto;
 }
